Address code review feedback: fix SSE timeout, per-partition offsets, and deque for event history
- Set SSE timeout to 30 minutes instead of no timeout to prevent resource leaks
- Change Kafka offset tracking to be per-partition for correct idempotency with multi-partition topics
- Use ConcurrentLinkedDeque instead of List for O(1) removal from event history
- Set kafka.enabled default to true for production-ready defaults
- Add MAX_EVENT_HISTORY constant for clarity

Co-authored-by: imperfectperson-max <125220547+imperfectperson-max@users.noreply.github.com>